[package]
name = "mcp_server"
edition = "2021"
version = "0.1.0"

[dependencies]
mcpr = { version = "0.2.3", default-features = false }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
rust_amidatabase = { path = "../rust_amidatabase" }
